overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 	@apply lg:max-w-[84%] mx-auto my-10;
 }
 body {
-	@apply bg-c-primary h-full text-c-light font-roboto overflow-x-scroll;
+	@apply bg-c-primary h-full text-c-light font-roboto overflow-y-scroll;
 }
 
 #__next {
